ESQL: Fix backport issues in 8.19
Four issues with the backport of the two CASE bug fixes:

1. PropagateEvalFoldables: Remove imports of LimitBy and MMR which don't
   exist in 8.19.

2. Case.java: Replace List.getFirst() (Java 21) with List.get(0) for
   Java 17 compatibility.

3. CsvTestsDataLoader: Add noData() method to TestDataset and guard the
   data-loading path to allow mapping-only datasets.

4. EsqlCapabilities + Case.java: Add CASE_FOLD_TEMPORAL_AMOUNT capability
   and the Case.fold() override for DATE_PERIOD/TIME_DURATION types so
   CASE with temporal amounts can be folded without going through the
   evaluator (which doesn't support those types).

5. CaseExtraTests: Replace equalToIgnoringIds (not available in 8.19)
   with sameInstance, since partiallyFold returns the original child.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>